--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,135 @@
 absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.4.0
+asgiref==3.8.1
 astunparse==1.6.3
+backoff==2.2.1
+bcrypt==4.2.0
+build==1.2.1
+cachetools==5.5.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.5
 click==8.1.7
+coloredlogs==15.0.1
+contourpy==1.2.1
+cycler==0.12.1
+Deprecated==1.2.14
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+filelock==3.15.4
 flatbuffers==24.3.25
+fonttools==4.53.0
+fsspec==2024.6.1
 gast==0.5.4
+google-auth==2.34.0
 google-pasta==0.2.0
+googleapis-common-protos==1.65.0
+groq==0.10.0
 grpcio==1.64.0
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.24.6
+humanfriendly==10.0
 idna==3.7
+importlib_metadata==8.4.0
+importlib_resources==6.4.4
 Jinja2==3.1.4
 joblib==1.4.2
 keras==3.3.3
+kiwisolver==1.4.5
+kubernetes==30.1.0
 libclang==18.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 mdurl==0.1.2
 ml-dtypes==0.3.2
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
 namex==0.0.8
+networkx==3.3
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+onnxruntime==1.19.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
 opt-einsum==3.3.0
 optree==0.11.0
 orjson==3.10.3
+overrides==7.7.0
 packaging==24.0
 pillow==10.3.0
+posthog==3.6.0
 protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.2
 pydantic_core==2.18.3
 Pygments==2.18.0
+pyparsing==3.1.2
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+regex==2024.7.24
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.7.1
+rsa==4.9
+safetensors==0.4.4
 scikit-learn==1.5.0
 scipy==1.13.1
+sentence-transformers==3.0.1
 setuptools==70.0.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
-tensorboard==2.16.2
+sympy==1.13.2
+tenacity==9.0.0
+tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow==2.17.0
 termcolor==2.4.0
+tf_keras==2.17.0
 threadpoolctl==3.5.0
+tokenizers==0.19.1
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
 typer==0.12.3
 typing_extensions==4.12.1
 ujson==5.10.0
@@ -63,7 +137,9 @@ urllib3==2.2.1
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
+websocket-client==1.8.0
 websockets==12.0
 Werkzeug==3.0.3
 wheel==0.43.0
 wrapt==1.16.0
+zipp==3.20.1
