--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Deprecated==1.2.14
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
+exceptiongroup==1.2.2
 fastapi==0.111.0
 fastapi-cli==0.0.4
 filelock==3.15.4
@@ -112,7 +113,6 @@ safetensors==0.4.4
 scikit-learn==1.5.0
 scipy==1.13.1
 sentence-transformers==3.0.1
-setuptools==70.0.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -122,10 +122,12 @@ tenacity==9.0.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
 tf_keras==2.17.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
+tomli==2.0.1
 torch==2.4.0
 tqdm==4.66.5
 transformers==4.44.2
@@ -140,6 +142,5 @@ watchfiles==0.22.0
 websocket-client==1.8.0
 websockets==12.0
 Werkzeug==3.0.3
-wheel==0.43.0
 wrapt==1.16.0
 zipp==3.20.1
