--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build
 autotrain_with_llm.egg-info
 dist
 
-autotrain_with_llm/training_files
 autotrain_with_llm/models/results
-autotrain_with_llm/ui/statics/images/
+autotrain_with_llm/ui/statics/images/*
+!autotrain_with_llm/ui/statics/images/home_image.png
 autotrain_with_llm/llm/utils/*.txt
