--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ dist
 autotrain_with_llm/models/results
 autotrain_with_llm/ui/statics/images/*
 !autotrain_with_llm/ui/statics/images/home_image.png
+!autotrain_with_llm/ui/statics/images/source_code_icon.png
+!autotrain_with_llm/ui/statics/images/upload_file_icon.png
 autotrain_with_llm/llm/utils/*.txt
